# tigerbeetle

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  BUSINESS_LOGIC.json  CHANGELOG.md  COMMANDS.md  DATA_STRUCTURES.md  DATA_STRUCTURES_TRANSFERS_IN_DETAIL.md  DESIGN.md  DESIGN_DECISIONS.md  Dockerfile  Dockerfile-fast-ml-api-adapter  INSTALL.md  IronBeetleToDo.txt  LICENSE  NETWORK_PROTOCOL.md  PAPERS.md  README.md  REVIEW.md  REVIEW_SUMMARY.md  TODO  TODO.txt  UPGRADE_UBUNTU_KERNEL.md  batch_timings.csv  batch_timings_fn01.csv  batch_timings_i4i8xlarge.csv  bench.zig  bootstrap.ps1  bootstrap.sh  bors.toml  build.zig  build.zig.zon  client.js  cloudbuild-fast-ml-api-adapter.yaml  cloudbuild-tiger-beetle.yaml  config.zig  connections.zig  experiment.sh  fast-ml-api-adapter.js  (+30 more)
.github/: pull_request_template.md
.github/ci/: docs_check.sh  fail_on_diff.sh  generate_release_message.sh  next_version.sh  publish_docs.sh  test_aof.sh  tests_on_alpine.sh  tests_on_ubuntu.sh
.github/workflows/: antithesis.yml  benchmark.yml  ci.yml  clients-dotnet-build.yml  clients-dotnet.yml  clients-go.yml  (+23 more)
alpha-beetle/: event-loop.zig  io_uring.zig  listen.zig
bitcast-demo/: README.md  bench-decode.js  bench-encode.js  transfer
client/: .eslintrc  jest.config.js  package.json
demos/: benchmark.zig  toy.zig
docs/: .cspell.json  404.html  ARCHITECTURE.md  Advantages for Mojaloop.md  CLOUD.md  COMMUNITY_PROJECTS.md  DEEP_DIVE.md  DESIGN.md  DOCKER_COMPOSE.md  FAQ.md  FEATURES.md  HACKING.md  INSTALL_ZIG.md  README.md  TALKS.md  TIGER_STYLE.md  TODO  header.zig  index.html  installation.md  intro.md  quick-start.md  quick-start.mdx  start.md  types_balanced.zig  types_extreme.zig  types_limited.zig
docs-internal/: DESIGN.md  DOCKER_COMPOSE.md  HISTORY.md  REFERENCE.md
docs-site/: .gitignore  docusaurus.config.js  package-lock.json  package.json
helm/: Chart.yaml  values.yaml
proto-beetle/: MOJALOOP_BUSINESS_LOGIC.txt  README.md  client.js  cloudbuild.yaml  fast-ml-api-adapter.js  log-event.js  package.json  server.js  stress.js
scripts/: .cspell.json  aof.sh  benchmark.bat  benchmark.sh  benchmark_client.sh  build.bat  build.sh  build_runner.zig  check_line_lengths  compaction_bounds.zig  confirm_image.sh  confirm_image_is_debug_build.sh  confirm_image_is_production_build.sh  create-transfers  docs_check.sh  format_debug_server.sh  fuzz_loop.sh  fuzz_loop_hash_log.sh  fuzz_repeatedly.sh  fuzz_unique_errors.sh  generate_release_message.sh  install.bat  install.sh  install_zig  install_zig.bat  install_zig.sh  lint  lint.zig  lint_tigerstyle.zig  next_version.sh  pre-commit.sh  run_tests.sh  shellcheck.sh  sparring_buddy  test_aof.sh  tests_on_alpine.sh  tests_on_fedora.sh  tests_on_ubuntu.sh  upgrade_ubuntu_kernel.sh  validate_docs.sh  (+3 more)
src/: aof.zig  benchmark.zig  benchmark_array_search.zig  benchmark_client.zig  binary_search.zig  blake3.zig  build_multiversion.zig  cli.zig  client.zig  clock.zig  cluster.zig  completion.zig  concurrent_ranges.zig  config.zig  connections.zig  constants.zig  copyhound.zig  counting_allocator.zig  demo.zig  demo_01_create_accounts.zig  demo_02_lookup_accounts.zig  demo_03_auto_commit_transfers.zig  demo_03_create_transfers.zig  demo_04_create_pending_transfers.zig  demo_04_create_transfers.zig  demo_04_create_transfers_two_phase_commit.zig  demo_05_accept_transfers.zig  demo_05_post_pending_transfers.zig  demo_06_reject_transfers.zig  demo_06_void_pending_transfers.zig  demo_07_lookup_transfers.zig  direction.zig  discovery.zig  dotnet_bindings.zig  encryption.zig  ewah.zig  ewah_benchmark.zig  ewah_fuzz.zig  eytzinger.zig  eytzinger_benchmark.zig  (+89 more)
src/clients/python/: .gitignore  README.md  ci.zig  client.py  client_build.py  docs.zig  pyproject.toml  python.zig  python_bindings.zig  python_def.zig  wheel.zig
src/clients/python/samples/basic/: README.md  main.py
src/clients/python/samples/two-phase/: README.md  main.py
src/clients/python/samples/two-phase-many/: README.md  main.py
src/clients/python/samples/walkthrough/: README.md  main.py
src/clients/python/src/tigerbeetle/: __init__.py  bindings.py  client.py  lib.py
src/clients/python/tests/: test_basic.py  test_close.py  test_init_parameters.py
src/clients/rust/: .gitignore  Cargo.toml  README.md  build.rs  ci.zig  docs.zig  rust_bindings.zig
src/clients/rust/assets/: tb_client.h
src/clients/rust/samples/basic/: Cargo.toml  README.md
src/clients/rust/samples/basic/src/: main.rs
src/clients/rust/samples/two-phase/: Cargo.toml  README.md
src/clients/rust/samples/two-phase-many/: Cargo.toml  README.md
src/clients/rust/samples/two-phase-many/src/: main.rs
src/clients/rust/samples/two-phase/src/: main.rs
src/clients/rust/samples/walkthrough/: Cargo.toml
src/clients/rust/samples/walkthrough/src/: main.rs
src/clients/rust/src/: conversions.rs  lib.rs  oneshot.rs  tb_client.rs  time_based_id.rs
src/clients/rust/tests/: status_codes_and_flags.rs  tests.rs
tigerlings/: 000_download.sh  001_data_file.sh  002_server.sh  003_create_account.sh  003_create_accounts1.sh  004_create_accounts.sh  004_create_accounts2.sh  005_create_transfer.sh  005_ledgers.sh  006_ledgers.sh  999_done.sh  run.sh  tb_function.sh  test.sh
zig/: .gitignore  download.bat  download.ps1  download.sh  download.win.ps1
(+1338 files in other folders)
