[project]
name = "tigerbeetle"
version = "0.0.1"
description = "The TigerBeetle client for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database :: Front-Ends",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/tigerbeetle/tigerbeetle"
Issues = "https://github.com/tigerbeetle/tigerbeetle/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["tigerbeetle"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.hatch.build.targets.sdist.force-include]
"src/tigerbeetle" = "tigerbeetle"
"README.md" = "tigerbeetle/README.md"

[tool.hatch.build.targets.wheel]
only-include = ["tigerbeetle"]
artifacts = ["*.so", "*.dylib", "*.dll"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
exclude = [
    "samples/",
    "tests/",
]
