[project]
name = "tigerbeetle"
version = "0.0.1"
description = "The TigerBeetle client for Python."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Database :: Front-Ends",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
Homepage = "https://github.com/tigerbeetle/tigerbeetle"
Issues = "https://github.com/tigerbeetle/tigerbeetle/issues"


[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
exclude = [
    "samples/",
    "tests/",
]
