[package]
name = "tigerbeetle"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
futures-channel = "0.3.31"

[build-dependencies]
anyhow = "1.0.93"
# Versions newer than 0.4.20 prohibit Rust <1.70 due to use of OnceLock
# Versions newer than 0.4.1 prohibit Rust <1.65 due to regex deps
ignore = "0.4.1"

[dev-dependencies]
anyhow = "1.0.93"
futures = "0.3.31"
